--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,12 @@
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/alert.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/navigation.css') }}" rel="stylesheet" />
+    {% block required_css %}
 
+    {% endblock %}
     <style>
       #profile_link {
         border: 1px solid var(--github-border);
