--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -4,6 +4,13 @@
   JueFire Studio - 导航站
 {% endblock %}
 
+{% block required_css %}
+  <link href="{{ url_for('static', filename='css/form.css') }}" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/card.css') }}" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/button.css') }}" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/modal.css') }}" rel="stylesheet" />
+{% endblock %}
+
 {% block content %}
   <div class="container mt-4">
     <!-- 导航 -->
