--- a/templates/base.html
+++ b/templates/base.html
@@ -183,13 +183,7 @@
 
               <li class="nav-item" style="margin: 0 5px">
                 <a class="nav-link" id="logout_link" href="{{ url_for('logout') }}" title="退出登录">
-                  <div style="
-                    width: 32px;
-                    height: 32px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                  ">
+                  <div class="d-flex align-items-center justify-content-center" style="width: 32px; height: 32px;">
                     <i class="fas fa-sign-out-alt"></i>
                   </div>
                   <span style="padding: 0 8px 0 0; line-height: 32px">登出</span>
